--- a/income_prediction.ipynb
+++ b/income_prediction.ipynb
@@ -70,6 +70,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['Bachelors', 'HS-grad', '11th', 'Masters', '9th', 'Some-college',\n",
+       "       'Assoc-acdm', '7th-8th', 'Doctorate', 'Assoc-voc', 'Prof-school',\n",
+       "       '5th-6th', '10th', 'Preschool', '12th', '1st-4th'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "df.education.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
